[package]
name = "cluster"
version = "0.1.0"
edition = "2021"
authors = ["Matt Whelan"]
description = "clusters strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
regex = "1.5.4"
strsim = "0.10.0"
itertools = "0.10.3"
kmedoids = "0.2.0"
ndarray = "0.15.4"