[package]
name = "solver"
version = "0.2.0"
edition = "2021"
authors = ["Matt Whelan"]
description = "solver for Wordle-like word games"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
regex = "1.5.4"
strsim = "0.10.0"
clap = { version = "3.0.13", features = ["derive", "env"]}

wordlib = { path = "../wordlib" }
